--- a/test/fixtures/post_images.yml
+++ b/test/fixtures/post_images.yml
@@ -5,3 +5,18 @@ one:
 
 two:
   post_id: 1
+
+# == Schema Information
+#
+# Table name: post_images
+#
+#  id                   :integer         not null, primary key
+#  post_id              :integer
+#  picture_file_name    :string(255)
+#  picture_content_type :string(255)
+#  picture_file_size    :integer
+#  picture_updated_at   :datetime
+#  created_at           :datetime
+#  updated_at           :datetime
+#
+
