Added more social plugins

--- a/test/fixtures/friendships.yml
+++ b/test/fixtures/friendships.yml
@@ -8,13 +8,15 @@ two:
   account_id: 1
   friend_id: 1
 
+
 # == Schema Information
 #
 # Table name: friendships
 #
 #  id         :integer         not null, primary key
-#  account_id :integer
-#  friend_id  :integer
+#  inviter_id :integer
+#  invited_id :integer
+#  status     :integer
 #  created_at :datetime
 #  updated_at :datetime
 #
