--- a/test/fixtures/titles.yml
+++ b/test/fixtures/titles.yml
@@ -7,3 +7,15 @@ one:
 two:
   score_needed: 1
   name: MyString
+
+# == Schema Information
+#
+# Table name: titles
+#
+#  id           :integer         not null, primary key
+#  score_needed :integer
+#  name         :string(255)
+#  created_at   :datetime
+#  updated_at   :datetime
+#
+
