--- a/config/database.yml
+++ b/config/database.yml
@@ -15,8 +15,13 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: sqlite3
-  database: db/development.rb
+  adapter: mysql
+  encoding: utf8
+  reconnect: false
+  database: patatoon_production
+  username: root
+  password: 
+  host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
