--- a/test/fixtures/favorite_teams.yml
+++ b/test/fixtures/favorite_teams.yml
@@ -8,13 +8,14 @@ two:
   team_id: 1
   account_id: 1
 
+
 # == Schema Information
 #
 # Table name: favorite_teams
 #
-#  id         :integer         not null, primary key
-#  team_id    :integer
-#  account_id :integer
+#  id         :integer(4)      not null, primary key
+#  team_id    :integer(4)
+#  account_id :integer(4)
 #  created_at :datetime
 #  updated_at :datetime
 #
