--- a/test/fixtures/friends.yml
+++ b/test/fixtures/friends.yml
@@ -8,11 +8,12 @@ two:
   name: MyString
   email: MyString
 
+
 # == Schema Information
 #
 # Table name: friends
 #
-#  id         :integer         not null, primary key
+#  id         :integer(4)      not null, primary key
 #  name       :string(255)
 #  email      :string(255)
 #  created_at :datetime
