--- a/test/fixtures/friendships.yml
+++ b/test/fixtures/friendships.yml
@@ -9,14 +9,15 @@ two:
   friend_id: 1
 
 
+
 # == Schema Information
 #
 # Table name: friendships
 #
-#  id         :integer         not null, primary key
-#  inviter_id :integer
-#  invited_id :integer
-#  status     :integer
+#  id         :integer(4)      not null, primary key
+#  inviter_id :integer(4)
+#  invited_id :integer(4)
+#  status     :integer(4)
 #  created_at :datetime
 #  updated_at :datetime
 #
