--- a/test/fixtures/post_images.yml
+++ b/test/fixtures/post_images.yml
@@ -6,15 +6,16 @@ one:
 two:
   post_id: 1
 
+
 # == Schema Information
 #
 # Table name: post_images
 #
-#  id                   :integer         not null, primary key
-#  post_id              :integer
+#  id                   :integer(4)      not null, primary key
+#  post_id              :integer(4)
 #  picture_file_name    :string(255)
 #  picture_content_type :string(255)
-#  picture_file_size    :integer
+#  picture_file_size    :integer(4)
 #  picture_updated_at   :datetime
 #  created_at           :datetime
 #  updated_at           :datetime
