--- a/test/fixtures/titles.yml
+++ b/test/fixtures/titles.yml
@@ -8,12 +8,13 @@ two:
   score_needed: 1
   name: MyString
 
+
 # == Schema Information
 #
 # Table name: titles
 #
-#  id           :integer         not null, primary key
-#  score_needed :integer
+#  id           :integer(4)      not null, primary key
+#  score_needed :integer(4)
 #  name         :string(255)
 #  created_at   :datetime
 #  updated_at   :datetime
