--- a/test/fixtures/championship_teams.yml
+++ b/test/fixtures/championship_teams.yml
@@ -7,3 +7,15 @@ one:
 two:
   team_id: 1
   championship_id: 1
+
+# == Schema Information
+#
+# Table name: championship_teams
+#
+#  id              :integer(4)      not null, primary key
+#  team_id         :integer(4)
+#  championship_id :integer(4)
+#  created_at      :datetime
+#  updated_at      :datetime
+#
+
