--- a/test/fixtures/championships.yml
+++ b/test/fixtures/championships.yml
@@ -15,3 +15,19 @@ two:
   description: MyText
   place: MyString
   winner_id: 1
+
+# == Schema Information
+#
+# Table name: championships
+#
+#  id          :integer(4)      not null, primary key
+#  name        :string(255)
+#  started_at  :datetime
+#  finished_at :datetime
+#  description :text
+#  place       :string(255)
+#  winner_id   :integer(4)
+#  created_at  :datetime
+#  updated_at  :datetime
+#
+
